project(DP)

#最长连续子序列和
add_executable(DP.MSS "1007 Maximum Subsequence Sum (25分).cpp")
#最长不下降子序列
add_executable(DP.LIS "1045 Favorite Color Stripe (30分)-LIS.cpp")
#最长公共子序列
add_executable(DP.LIS "1045 Favorite Color Stripe (30分)-LCS.cpp")
#最长回文子串
add_executable(DP.LCS "1040 Longest Symmetric String (25分).cpp")
#背包问题
add_executable(DP.BAG "1068 Find More Coins (30分).cpp")
