project(Graph)

#图的遍历
add_executable(GTravel.battle "1013 Battle over cities.cpp")
add_executable(GTravel.root "1021 Deepest Root.cpp")
add_executable(GTravel.head "1034 Head of Gang.cpp")
add_executable(GTravel.weibo "1076 Forwards of Weibo.cpp")

#最短路径
add_executable(GSPath.emergency "1003 Emergency.cpp")
add_executable(GSPath.Bike "1018 Public Bike Management.cpp")
add_executable(GSPath.Travel "1030 Travel Plan.cpp")
add_executable(GSPath.Gas "1072 Gas Station.cpp")
add_executable(GSPath.Rome "1087 All Roads lead to Rome.cpp")